Fixed signin bug and added an AccountView page

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,21 +24,21 @@ repositories {
     }
 }
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     //    compile 'com.google.firebase:firebase-database:10.0.1'
-//    compile 'com.google.firebase:firebase-auth:10.0.1'
-//    compile 'com.android.support:support-v4:24.2.1'
+    //    compile 'com.google.firebase:firebase-auth:10.0.1'
+    //    compile 'com.android.support:support-v4:24.2.1'
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support:design:24.2.1'
-    compile 'com.google.firebase:firebase-database:10.0.1'
-    compile 'com.google.firebase:firebase-auth:10.0.1'
-    compile 'com.github.sayyam:carouselview:ba1beb2415'
+    compile 'com.synnapps:carouselview:0.0.10'
     compile 'com.akexorcist:RoundCornerProgressBar:2.0.3'
-    compile 'com.android.support:support-v4:24.2.1'
-    testCompile 'junit:junit:4.12'
+    compile 'com.google.firebase:firebase-database:9.6.1'
+    compile 'com.google.firebase:firebase-auth:9.6.1'
+    compile 'com.github.nihasKalam07:ProgressButton:e421f3b43a'
+
 }
 
 
