--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,9 +28,6 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    //    compile 'com.google.firebase:firebase-database:10.0.1'
-    //    compile 'com.google.firebase:firebase-auth:10.0.1'
-    //    compile 'com.android.support:support-v4:24.2.1'
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.google.firebase:firebase-storage:9.6.1'
     compile 'com.android.support:design:24.2.1'
@@ -40,6 +37,7 @@ dependencies {
     compile 'com.google.firebase:firebase-auth:9.6.1'
     compile 'com.github.nihasKalam07:ProgressButton:e421f3b43a'
     compile 'com.android.support:cardview-v7:24.1.0'
+    compile 'com.braintreepayments.api:drop-in:3.+'
 
 
 }
