--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     compile 'com.google.firebase:firebase-auth:9.6.1'
     compile 'com.github.nihasKalam07:ProgressButton:e421f3b43a'
     compile 'com.android.support:cardview-v7:24.1.0'
+    compile 'com.loopj.android:android-async-http:1.4.9'
     compile 'com.braintreepayments.api:drop-in:3.+'
 
 
