--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,7 +49,19 @@
             android:name=".FinishCreateFundraiserActivity"
             android:label="@string/title_activity_finish_create_fundraiser"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".DonateActivity"></activity>
+        <activity android:name=".DonateActivity"
+            android:label="Donate"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:windowSoftInputMode="adjustResize" />
+        <activity android:name="com.braintreepayments.api.BraintreeBrowserSwitchActivity"
+            android:launchMode="singleTask">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:scheme="${applicationId}.braintree" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
