--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,19 +28,20 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+
+
     compile 'com.android.support:appcompat-v7:24.2.1'
-    compile 'com.google.firebase:firebase-storage:9.6.1'
+    compile 'com.google.firebase:firebase-storage:10.0.1'
     compile 'com.android.support:design:24.2.1'
     compile 'com.synnapps:carouselview:0.0.10'
     compile 'com.akexorcist:RoundCornerProgressBar:2.0.3'
-    compile 'com.google.firebase:firebase-database:9.6.1'
-    compile 'com.google.firebase:firebase-auth:9.6.1'
+    compile 'com.google.firebase:firebase-database:10.0.1'
+    compile 'com.google.firebase:firebase-auth:10.0.1'
     compile 'com.github.nihasKalam07:ProgressButton:e421f3b43a'
-    compile 'com.android.support:cardview-v7:24.1.0'
+    compile 'com.android.support:cardview-v7:24.2.1'
     compile 'com.loopj.android:android-async-http:1.4.9'
     compile 'com.braintreepayments.api:drop-in:3.+'
-
-
+    compile 'com.android.support:support-v4:24.2.1'
 }
 
 
