--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     compile 'com.loopj.android:android-async-http:1.4.9'
     compile 'com.braintreepayments.api:drop-in:3.+'
     compile 'com.android.support:support-v4:24.2.1'
+    compile 'com.balysv:material-ripple:1.0.1'
 }
 
 
