implemented intro sequence and fixed misc bugs

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:largeHeap="true">
         <activity
             android:name=".NavDrawerActivity"
             android:label="@string/app_name"
@@ -27,7 +28,7 @@
             android:name=".TitlescreenActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="Launch"
-            android:theme="@style/FullscreenTheme"></activity>
+            android:theme="@style/FullscreenTheme" />
         <activity
             android:name=".SplashActivity"
             android:theme="@style/SplashTheme">
@@ -49,29 +50,40 @@
             android:name=".FinishCreateFundraiserActivity"
             android:label="@string/title_activity_finish_create_fundraiser"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".DonateActivity"
+        <activity
+            android:name=".DonateActivity"
             android:label="Donate"
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="adjustResize" />
-        <activity android:name=".BuyItemActivity"
+        <activity
+            android:name=".BuyItemActivity"
             android:label="Complete Purchase"
             android:theme="@style/AppTheme.NoActionBar"
             android:windowSoftInputMode="adjustResize" />
-        <activity android:name=".BrowseItemsActivity"
+        <activity
+            android:name=".BrowseItemsActivity"
             android:label="Browse Fundraiser Items"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".ItemActivity"
+        <activity
+            android:name=".ItemActivity"
             android:label="Item Info"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name="com.braintreepayments.api.BraintreeBrowserSwitchActivity"
+        <activity
+            android:name="com.braintreepayments.api.BraintreeBrowserSwitchActivity"
             android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
+
                 <data android:scheme="${applicationId}.braintree" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".IntroductionScene"
+            android:label="Introduction"
+            android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
 </manifest>
