--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,9 @@
             android:label="@string/title_activity_sign_up"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
+            android:name=".IntroductionScene"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
             android:name=".TitlescreenActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="Launch"
